# CATEST

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT_REPORT.md  DEPLOY_GUIDE.md  LICENSE  README.md  all_pods.txt  build_err.txt  build_err_2.txt  build_err_ingestion.txt  build_err_parser.txt  build_logs.txt  build_logs_2.txt  build_logs_3.txt  build_logs_4.txt  build_out.txt  catest_services_new.txt  check_err.txt  check_log.txt  clippy_output.txt  clippy_output_2.txt  clippy_run.txt  compile_err.txt  databases.txt  docker-compose.yml  docker_build_log.txt  docker_build_log_gateway.txt  docker_build_log_v2.txt  docker_build_log_v3.txt  docker_build_log_v4.txt  docker_build_log_v5.txt  docker_images.txt  eg_services.txt  embedding_err.txt  embedding_log.txt  embedding_logs_v2.txt  files_def.txt  gateway_check.txt  (+76 more)
.claude/: launch.json  settings.local.json
.github/workflows/: docker-publish.yml  docker-verify.yml  frontend.yml  k8s-validate.yml  rust.yml
crates/batch/: Cargo.toml
crates/batch/src/: api.rs  db.rs  main.rs  models.rs  worker.rs
crates/common/: Cargo.toml
crates/common/src/: events.rs  lib.rs  models.rs  rag_models.rs  utils.rs
crates/embedding/: Cargo.toml
crates/embedding/src/: lib.rs  main.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs
crates/gateway/src/sync/: mod.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: lib.rs  main.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs  main.rs
crates/review/: Cargo.toml
crates/review/src/: main.rs
crates/search-domain/: Cargo.toml
crates/search-domain/src/: lib.rs
crates/stream-events/: Cargo.toml
crates/stream-events/src/: consumer.rs  events.rs  lib.rs  producer.rs
docker/postgres/: Dockerfile
issues/: 2026-03-24-kind-to-docker-desktop-k8s-migration.md
k8s/: deploy.ps1  deploy.sh  error.txt  svc.txt
k8s/base/: app-secrets.yaml  namespace.yaml
k8s/infra/: ext-services.yaml
k8s/infra/arroyo/: deployment.yaml  service.yaml
k8s/infra/envoy-gateway/: configmap.yaml  deployment.yaml  envoy-proxy.yaml  gateway.yaml  routes.yaml
k8s/infra/kafka/: service.yaml  statefulset.yaml
k8s/infra/neo4j/: secret.yaml  service.yaml  statefulset.yaml
k8s/infra/postgres/: secret.yaml  service.yaml  statefulset.yaml
k8s/infra/qdrant/: service.yaml  statefulset.yaml
k8s/keda/: keda-metrics-ext.yaml  keda-service-ext.yaml  scaled-objects.yaml
k8s/rbac/: service-account.yaml
k8s/services/: workspace-svc.yaml
k8s/services/batch/: cronjob-mb-rebuild.yaml  deployment.yaml  service.yaml  worker-scaledjob.yaml
k8s/services/embedding/: deployment.yaml
k8s/services/gateway/: deployment.yaml  service.yaml
k8s/services/ingestion/: job.yaml
k8s/services/parser/: deployment.yaml
k8s/services/review/: deployment.yaml  service.yaml
k8s/services/web/: deployment.yaml  service.yaml
k8s/services/web-rag/: manifest.yaml
k8s/services/web-review/: manifest.yaml
k8s/services/web-team/: manifest.yaml
k8s/services/web-workspace/: manifest.yaml
scripts/: create_databases.sh  setup_neo4j.cypher  smoke_test.ps1
scripts/arroyo/: 01-segment-analysis.sql  02-review-rollup.sql  03-rag-cleaning.sql
scripts/initdb.d/: 00-create_databases.sh  01-gateway.sql  02-ingestion.sql  02-rag-modules.sql  03-parser.sql  03-sync-engine.sql  04-review.sql
tools/: generate_textures.py
web/: .dockerignore  Dockerfile  lint_output.txt  lint_output_2.txt  next.config.ts  package.json  pnpm-lock.yaml  test_result.txt  web_base_debug_logs.txt  web_base_final_logs.txt  web_base_logs.txt  web_log.txt  web_rag_debug_logs.txt  web_rag_final_logs.txt  web_rag_logs.txt  web_review_debug_logs.txt  web_review_final_logs.txt  web_review_logs.txt  web_workspace_debug_logs.txt  web_workspace_final_logs.txt  web_workspace_logs.txt
web/.workspaces/: cat_ws_1773518795293.db
web/__tests__/: review-graph.test.ts  session.test.ts  sqlite.test.ts
web/apps/web-base/: Dockerfile  lint_output_3.txt  next.config.ts  package-lock.json  package.json  tsconfig.json
web/apps/web-base/scripts/: test_auth.ts
web/apps/web-base/src/: middleware.ts
web/apps/web-base/src/app/: globals.css  layout.tsx
web/apps/web-base/src/lib/: session.ts
web/apps/web-rag/: Dockerfile  package.json
web/apps/web-rag/src/app/: layout.tsx  page.tsx
web/apps/web-rag/src/lib/: db.ts
web/apps/web-review/: Dockerfile  next.config.mjs  package.json  tsconfig.tsbuildinfo  vitest.config.ts
web/apps/web-review/src/: middleware.ts
web/apps/web-review/src/__tests__/: global-setup.ts  server-actions.test.ts
web/apps/web-review/src/app/: globals.css  layout.tsx  page.tsx
web/apps/web-review/src/lib/: db.ts  gateway-db.ts  (+3 more)
web/apps/web-team/: Dockerfile  next.config.ts  package.json
web/apps/web-workspace/: Dockerfile  package.json  tsconfig.json  vitest.config.ts
web/apps/web-workspace/src/: middleware.ts
web/public/textures/: gear_brass.ktx2  gear_copper.ktx2  metal_plate.ktx2  patina_noise.ktx2  rivet_normal.ktx2  steam_particle.ktx2  valve_gate.ktx2  valve_wheel.ktx2
web/scripts/: init_users_table.ts  test_auth.ts
web/src/: middleware.ts
web/src/app/: globals.css  page.tsx
web/src/app/account/: page.tsx
web/src/app/actions/: account.ts  agent.ts  auth.ts
web/src/app/login/: page.tsx
web/src/app/rag/: page.tsx
web/src/app/review/: page.tsx
web/src/app/workspace/: page.tsx
web/src/lib/: db.ts  mailer.ts  sqlite.ts
web/src/lib/agents/: review-graph.ts
web_vite_backup/: index.html  package-lock.json  package.json  vite.config.ts
web_vite_backup/src/: App.tsx  index.css
(+35 files in other folders)
