[package]
name = "catest-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-java = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
stream-events = { path = "../stream-events" }
async-trait = { workspace = true }


[dev-dependencies]
mockall = { workspace = true }
tempfile = "3"
serde_json = { workspace = true }

